account edit page markup added

--- a/static/logIn.html
+++ b/static/logIn.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <link rel="stylesheet" type="text/css" href="styles/reglogStyle.css">
+        <link rel="stylesheet" type="text/css" href="styles/registrationLoginStyle.css">
         <link rel="stylesheet" type="text/css" href="materialize/css/materialize.min.css">
         <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
         <script type="text/javascript" src="materialize/js/materialize.min.js"></script>
