--- a/static/index.html
+++ b/static/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <link rel="stylesheet" type="text/css" href="styles/mainPageMenuStyle.css">
-        <link rel="stylesheet" type="text/css" href="styles/mainPageStyle.css">
+        <link rel="stylesheet" type="text/css" href="styles/indexMenuStyle.css">
+        <link rel="stylesheet" type="text/css" href="styles/indexStyle.css">
         <title>uFeed - Main Page</title>
     </head>
     <body>
