profile component view

--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
     <link rel="stylesheet" type="text/css" href="styles/reglogStyle.css">
     <link rel="stylesheet" type="text/css" href="styles/inputMaterial.css">
 
+    <script type="text/javascript" src="materialize/js/materialize.min.js"></script>
+    <link rel="stylesheet" type="text/css" href="styles/accountEditStyle.css">
+
+    <link rel="stylesheet" type="text/css" href="materialize/css/materialize.min.css">
+
     <base href="/">
     <title>Angular QuickStart</title>
     <meta charset="UTF-8">
