profile component strong view

--- a/index.html
+++ b/index.html
@@ -29,6 +29,15 @@
             console.error(err);
         });
     </script>
+    <style>
+        .container-custom {
+            width: 600px;
+            margin: 30px auto 0;
+            display: block;
+            background: #FFF;
+            padding: 10px 50px 50px;
+        }
+    </style>
 </head>
 <body>
 <app-comp>Loading...</app-comp>
