Account edit page fixed markup for 1080p

--- a/static/accountEdit.html
+++ b/static/accountEdit.html
@@ -13,7 +13,7 @@
                 <a href="#"><img src="content/images/logo.png" class="logoImage"></a>
             </div>
             <div class="headLinks input-field">
-                <a class="dropdown-button" href="#" data-activates="drop1"><img src="content/images/person.png" class="miniPhoto"><img src="content/images/arrow.png"></a>
+                <a class="dropdown-button" href="#" data-activates="drop1"><img src="content/images/person.png" class="miniPhoto"><img src="content/images/arrow.png" class="arrowImage"></a>
                 
                 <ul id='drop1' class='dropdown-content'>
                     <li><a href="#!">Settings</a></li>
@@ -23,14 +23,14 @@
             </div>
         </div>
         <div class="location">
-            <h3 class="locationText">Account Settings</h3>
+            <h4 class="locationText">Account Settings</h4>
         </div>
         <div class="content">
             <div class="mainInfo">
                 <div class="profilePhoto">
                     <img src="content/images/person.png" class="mainPhoto">
                     <br>
-                    <div class="qwe">
+                    <div class="uploadLink">
                         <a href="#" class="photoLink"><h5><img src="content/images/download_icon.png" class="uploadPhoto"> Upload photo</h5></a>
                     </div>
                 </div>
