Registration and login pages integrated into index.html

--- a/static/index.html
+++ b/static/index.html
@@ -3,6 +3,10 @@
     <head>
         <link rel="stylesheet" type="text/css" href="styles/indexMenuStyle.css">
         <link rel="stylesheet" type="text/css" href="styles/indexStyle.css">
+        <link rel="stylesheet" type="text/css" href="styles/registrationLoginStyle.css">
+        <link rel="stylesheet" type="text/css" href="materialize/css/materialize.min.css">
+        <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
+        <script type="text/javascript" src="materialize/js/materialize.min.js"></script>
         <title>uFeed - Main Page</title>
     </head>
     <body>
@@ -15,10 +19,52 @@
                 <a href="index.html"><img src="content/images/signUp.png" class="headlink"></a>
             </div>
         </div>
-        <div class="content">
+        <div class="menuLogs">
+            <div class="regLogContent">
+                <div class="exit">
+                    <a href="#"><img src="content/images/exit.png" class="exitLink"></a>
+                </div>
+                <div class="bodyForm">
+                    <form>
+                        <div class="materialInput">
+                            <input placeholder="Login" type="text">
+                        </div>
+                        <div class="materialInput">
+                            <input placeholder="Password" type="password">
+                        </div>
+
+                        <input type="image" src="content/images/logInL.png" class="submitButton">
+                    </form>
+                </div>
+            </div>
+            <div class="regLogContent">
+                <div class="exit">
+                    <a href="#"><img src="content/images/exit.png" class="exitLink"></a>
+                </div>
+                <div class="bodyForm">
+                    <form>
+                        <div class="materialInput">
+                            <input placeholder="Login" type="text">
+                        </div>
+                        <div class="materialInput">
+                            <input placeholder="Email" type="text">
+                        </div>
+                        <div class="materialInput">
+                            <input placeholder="Password" type="password">
+                        </div>
+                        <div class="materialInput">
+                            <input placeholder="Confirm Password" type="password">
+                        </div>
+
+                        <input type="image" src="content/images/signUpR.png" class="submitButton">
+                    </form>
+                </div>
+            </div>
+        </div>
+        <div class="indexContent">
             <div class="contentHeader">
                 <div class="mainLogoContainer">
-                    <img src="content/images/mainLogo.png" class="mainLogo">
+                    <img src="content/images/mainLogo.png" class="indexMainLogo">
                 </div>
                 <div class="mainDescription mainText">
                     <p>allows you to posts, new or other items from different social networks <br>
