--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
 
     <script src="node_modules/core-js/client/shim.min.js"></script>
     <script src="node_modules/zone.js/dist/zone.js"></script>
+
+    <script src="node_modules/rxjs/bundles/Rx.js"></script>
+
     <script src="node_modules/reflect-metadata/Reflect.js"></script>
     <script src="node_modules/systemjs/dist/system.src.js"></script>
     <!-- 2. Configure SystemJS -->
