created feed route and added missing heading styles

--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
     <base href="/">
 
+    <link rel="stylesheet" href="styles/headMenuStyle.css">
+
     <link rel="stylesheet" type="text/css" href="styles/indexMenuStyle.css">
     <link rel="stylesheet" type="text/css" href="styles/indexStyle.css">
     <link rel="stylesheet" type="text/css" href="styles/registrationLoginStyle.css">
