try to make user editing.  + minor fixes in login/resister submit button

--- a/app/auth/login-component.html
+++ b/app/auth/login-component.html
@@ -26,6 +26,8 @@
 
 
                 <input type="image" src="content/images/logInL.png"
+                       [disabled]="!formTemplate.valid || formTemplate.pristine"
+                       [class.disabled]="!formTemplate.valid || formTemplate.pristine"
                        class="submitButton">
             </form>
         </div>
