--- a/app/auth/register-component.html
+++ b/app/auth/register-component.html
@@ -6,10 +6,10 @@
         <div class="bodyForm">
             <form #formTemplate="ngForm">
                 <div *ngIf="name.errors">
-                    <small>Name must consist from 1 to 25 characters</small>
+                    <small>Name must consist from 1 to 35 elements</small>
                 </div>
                 <div class="materialInput">
-                    <input placeholder="Name" pattern="\w{1,25}"
+                    <input placeholder="Name" pattern="[\s\w]{1,35}"
                            [(ngModel)]="user.Name" #name="ngModel"
                            [class.red]="name.errors" [class.lighten-5]="name.errors"
                            name="name" type="text">
@@ -39,11 +39,15 @@
                 </div>
                 <div class="materialInput">
                     <input placeholder="Confirm Password" #confirmInput="ngModel" [(ngModel)]="confirmPass"
-                           [class.red]="confirmInput.errors" [class.lighten-5]="confirmInput.errors"
+                           [class.red]="!(passInput.value===confirmInput.value)"
+                           [class.lighten-5]="!(passInput.value===confirmInput.value)"
                            name="confirmPass" type="password">
                 </div>
                 <input type="image" src="content/images/signUpR.png"
                        (click)="register()"
+                       [disabled]="!formTemplate.valid || !(passInput.value===confirmInput.value) || formTemplate.pristine"
+                       [class.disabled]="!formTemplate.valid || !(passInput.value===confirmInput.value)
+                        || formTemplate.pristine"
                        class="submitButton">
             </form>
         </div>
