pre feed acquiring commit. NOTE! Hardcoded token here!

--- a/app/feed/feed.template.html
+++ b/app/feed/feed.template.html
@@ -27,60 +27,7 @@
             <a routerLink="./createCategory" class="tabLink"><img src="content/images/add_category.png" class="ulLink">Add category</a>
         </div>
         <div class="tabContent">
-            <div class="tabCard">
-                <div class="cardHeader">
-                    <a href="#" class="publicLink"><img src="content/images/person.png" class="miniPhoto">Public Name</a>
-                    <a href="#" class="favouriteLink"><img src="content/images/favourite.png" class="ulLink"></a>
-                </div>
-                <div class="cardContent">
-                    <p>This text is so cool. This text is so cool. This text is so cool. This text is so cool. This text is so cool. This text is so cool. This text is so cool. This text is so cool. This text is so cool. This text is so cool. This text is so cool. This text is so cool. This text is so cool. This text is so cool. This text is so cool. This text is so cool. This text is so cool. This text is so cool. This text is so cool. This text is so cool. This text is so cool. This text is so cool. This text is so cool.</p>
-                    <div class="carContentImages">
-                        <img src="content/images/test_photo.png" class="cardContentImage">
-                    </div>
-                </div>
-                <div clas="cardActions">
-                    <div class="likeContainer">
-                        <a href="#" class="cardText"><img src="content/images/like.png" class="ulLink">Like</a>
-                        <span class="cardText">190</span>
-                    </div>
-                    <span class="postTime">Three hours ago</span>
-                </div>
-            </div>
-            <div class="tabCard">
-                <div class="cardHeader">
-                    <a href="#" class="publicLink"><img src="content/images/person.png" class="miniPhoto">Public Name</a>
-                    <a href="#" class="favouriteLink"><img src="content/images/favourite.png" class="ulLink"></a>
-                </div>
-                <div class="cardContent">
-                    <p> This text is so cool. This text is so cool. This text is so cool. This text is so cool. This text is so cool. This text is so cool. This text is so cool. This text is so cool. This text is so cool.</p>
-                    <div class="carContentImages">
-                        <img src="content/images/test_photo.png" class="cardContentImage">
-                    </div>
-                </div>
-                <div clas="cardActions">
-                    <div class="likeContainer">
-                        <a href="#" class="cardText"><img src="content/images/like.png" class="ulLink">Like</a>
-                        <span class="cardText">190</span>
-                    </div>
-                    <span class="postTime">Three hours ago</span>
-                </div>
-            </div>
-            <div class="tabCard">
-                <div class="cardHeader">
-                    <a href="#" class="publicLink"><img src="content/images/person.png" class="miniPhoto">Public Name</a>
-                    <a href="#" class="favouriteLink"><img src="content/images/favourite.png" class="ulLink"></a>
-                </div>
-                <div class="cardContent">
-                    <p>This text is so cool. This text is so cool. This text is so cool. This text is so cool. This text is so cool. This text is so cool. This text is so cool. This text is so cool. This text is so cool. This text is so cool. This text is so cool. This text is so cool. This text is so cool. This text is so cool. This text is so cool. This text is so cool. This text is so cool. This text is so cool. This text is so cool. This text is so cool. This text is so cool. This text is so cool. This text is so cool.</p>
-                </div>
-                <div clas="cardActions">
-                    <div class="likeContainer">
-                        <a href="#" class="cardText"><img src="content/images/like.png" class="ulLink">Like</a>
-                        <span class="cardText">190</span>
-                    </div>
-                    <span class="postTime">Three hours ago</span>
-                </div>
-            </div>
+            <feed-list></feed-list>
         </div>
     </div>
 </div>
