--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <base href="/">
 
     <link rel="stylesheet" href="styles/headMenuStyle.css">
+    <link rel="stylesheet" href="styles/feedStyle.css">
 
     <link rel="stylesheet" type="text/css" href="styles/indexMenuStyle.css">
     <link rel="stylesheet" type="text/css" href="styles/indexStyle.css">
