basiv feed done with predefined custom category.NOTE:  with hardcoded FB API and category

--- a/app/feed/feed.template.html
+++ b/app/feed/feed.template.html
@@ -23,7 +23,7 @@
     </div>
     <div class="feedTape lineUp">
         <div class="tabs">
-            <a *ngFor="let category of user.Categories" class="tabLink">{{category}}</a>
+            <a *ngFor="let category of user.Categories" class="tabLink">Custom  category</a>
             <a routerLink="./createCategory" class="tabLink"><img src="content/images/add_category.png" class="ulLink">Add category</a>
         </div>
         <div class="tabContent">
