--- a/app/feed/post.template.html
+++ b/app/feed/post.template.html
@@ -1,7 +1,7 @@
 <div *ngFor="let post of posts" class="tabCard">
     <div class="cardHeader">
         <a class="publicLink">
-            <img src="https://pp.vk.me/c626324/v626324776/1a981/5pPExdq3tEQ.jpg" class="miniPhoto">{{post.Author.Name}}</a>
+            <img [src]="post.Author.Photo.Url" class="miniPhoto">{{post.Author.Name}}</a>
         <a class="favouriteLink"><img src="content/images/favourite.png" class="ulLink"></a>
     </div>
     <div class="cardContent">
