--- a/app/feed/post.template.html
+++ b/app/feed/post.template.html
@@ -6,10 +6,10 @@
     </div>
     <div class="cardContent">
         <p>{{post.Message}}</p>
-        <a *ngIf="post.Attachments.Link" [href]="post.Attachments.Link.URL"></a>
+        <a *ngIf="post?.Attachments[0]?.Link" [href]="post.Attachments[0].Link.URL"></a>
         <div class="carContentImages">
-            <img *ngIf="post.Attachments.Photo" [src]="post.Attachments.Photo" class="cardContentImage">
-            <img *ngIf="post.Attachments.Link" [src]="post.Attachments.Link.Photo.Url" class="cardContentImage">
+            <img *ngIf="post?.Attachments[0]?.Photo" [src]="post.Attachments[0].Photo" class="cardContentImage">
+            <img *ngIf="post?.Attachments[0]?.Link?.Photo?.Url" [src]="post.Attachments[0].Link.Photo.Url" class="cardContentImage">
         </div>
     </div>
     <div clas="cardActions">
