--- a/static/feed.html
+++ b/static/feed.html
@@ -36,7 +36,7 @@
                             <a href="#" class="socialLink"><img src="content/images/fb.png" class="ulLink">Facebook</a>
                         </li>
                         <li>
-                            <a href="#" class="socialLink"><img src="content/images/add_category.png" class="ulLink">Add category</a>
+                            <a href="#" class="socialLink"><img src="content/images/add_category.png" class="ulLink">Add network</a>
                         </li>
                         <li>
                             <a href="#" class="socialLink"><img src="content/images/favourite.png" class="ulLink">Favourite</a>
@@ -49,7 +49,6 @@
                     <a href="#" class="tabLink">test</a>
                     <a href="#" class="tabLink">test</a>
                     <a href="#" class="tabLink">test</a>
-                    <a href="#" class="tabLink"><img src="content/images/add_category.png" class="ulLink">Add category</a>
                 </div>
                 <div class="tabContent">
                     <div class="tabCard">
