added obtaining user info in authService + implemented category creation

--- a/app/feed/feed.template.html
+++ b/app/feed/feed.template.html
@@ -6,10 +6,10 @@
         <div class="availableSocials">
             <ul>
                 <li>
-                    <a href="#" class="socialLink"><img src="content/images/vk.png" class="ulLink">Vkontakte</a>
+                    <a routerLink="/category/facebook" class="socialLink"><img src="content/images/fb.png" class="ulLink">Facebook</a>
                 </li>
                 <li>
-                    <a href="#" class="socialLink"><img src="content/images/fb.png" class="ulLink">Facebook</a>
+                    <a href="#"  class="socialLink"><img src="content/images/vk.png" class="ulLink">Vkontakte</a>
                 </li>
                 <li>
                     <a href="#" class="socialLink"><img src="content/images/add_category.png" class="ulLink">Add
