--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="styles/headMenuStyle.css">
     <link rel="stylesheet" href="styles/feedStyle.css">
 
+    <link rel="stylesheet" type="text/css" href="styles/categotyEdit.css">
     <link rel="stylesheet" type="text/css" href="styles/indexMenuStyle.css">
     <link rel="stylesheet" type="text/css" href="styles/indexStyle.css">
     <link rel="stylesheet" type="text/css" href="styles/registrationLoginStyle.css">
