added category removal functionality

--- a/static/categoryEdit.html
+++ b/static/categoryEdit.html
@@ -82,6 +82,9 @@
                                     </p>
                                  </li>
                             </ul>
+                            <div style="padding: 0 10px 10px 0" class="right-align">
+                                <a href="#">Delete category</a>
+                            </div>
                         </div>
                     </li>
                     <li>
