categories authors displaying

--- a/static/categoryEdit.html
+++ b/static/categoryEdit.html
@@ -92,7 +92,7 @@
                         <div class="collapsible-body">
                             <ul class="catGroupList">
                                  <li>
-                                     <p>
+                                     <p class="left-align">
                                       <input type="checkbox" id="test9" />
                                       <label for="test9"><img src="content/images/group.png" class="ulImage">Test</label>
                                     </p>
