separating social networks category editing

--- a/app/feed/feed.template.html
+++ b/app/feed/feed.template.html
@@ -9,14 +9,14 @@
                     <a routerLink="/category/facebook" class="socialLink"><img src="content/images/fb.png" class="ulLink">Facebook</a>
                 </li>
                 <li>
-                    <a href="#"  class="socialLink"><img src="content/images/vk.png" class="ulLink">Vkontakte</a>
+                    <a routerLink="/category/vk" class="socialLink"><img src="content/images/vk.png" class="ulLink">Vkontakte</a>
                 </li>
                 <li>
-                    <a href="#" class="socialLink"><img src="content/images/add_category.png" class="ulLink">Add
+                    <a routerLink="/category/facebook" class="socialLink"><img src="content/images/add_category.png" class="ulLink">Add
                         category</a>
                 </li>
                 <li>
-                    <a href="#" class="socialLink"><img src="content/images/favourite.png" class="ulLink">Favourite</a>
+                    <a routerLink="/bookmarks" class="socialLink"><img src="content/images/favourite.png" class="ulLink">Favourite</a>
                 </li>
             </ul>
         </div>
