--- a/app/feed/post.template.html
+++ b/app/feed/post.template.html
@@ -10,7 +10,7 @@
         <p>{{post.Message}}</p>
         <a *ngIf="post?.Attachments[0]?.Link" [href]="post.Attachments[0].Link.URL"></a>
         <div class="carContentImages">
-            <img *ngIf="post?.Attachments[0]?.Photo" [src]="post.Attachments[0].Photo" class="cardContentImage">
+            <img *ngIf="post?.Attachments[0]?.Photo?.Url" [src]="post.Attachments[0].Photo.Url" class="cardContentImage">
             <img *ngIf="post?.Attachments[0]?.Link?.Photo?.Url" [src]="post.Attachments[0].Link.Photo.Url" class="cardContentImage">
         </div>
     </div>
