--- a/app/feed/post.template.html
+++ b/app/feed/post.template.html
@@ -7,12 +7,13 @@
            class="favouriteLink"><img #fav src="content/images/favourite.png" class="ulLink"></a>
     </div>
     <div class="cardContent">
-        <p>{{post.Message}}</p>
-        <a *ngIf="post?.Attachments[0]?.Link" [href]="post.Attachments[0].Link.URL"></a>
-        <div class="carContentImages">
-            <img *ngIf="post?.Attachments[0]?.Photo?.Url" [src]="post.Attachments[0].Photo.Url" class="cardContentImage">
-            <img *ngIf="post?.Attachments[0]?.Link?.Photo?.Url" [src]="post.Attachments[0].Link.Photo.Url" class="cardContentImage">
-        </div>
+    <p>{{post.Message}}</p>
+    <a *ngIf="post?.Attachments[0]?.Link" [href]="post.Attachments[0].Link.URL"></a>
+    <div class="carContentImages">
+        <img *ngIf="post?.Attachments[0]?.Photo?.Url" [src]="post.Attachments[0].Photo.Url" class="cardContentImage">
+        <img *ngIf="post?.Attachments[0]?.Link?.Photo?.Url" [src]="post.Attachments[0].Link.Photo.Url"
+             class="cardContentImage">
+    </div>
     </div>
     <div clas="cardActions">
         <div class="likeContainer">
